# bevy-particles

./: Cargo.toml
.github/workflows/: static.yml
src/: main.rs
src/scenes/: main_menu_scene.rs  mod.rs  particle_scene.rs
webbuild/: index.html
webbuild/wasm-out/: bevy-particles.d.ts  bevy-particles.js  bevy-particles_bg.wasm.d.ts
